# NetAI

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  SPREAD_THE_WORD.md  demo.py  docker-compose.yml  models_catalog.json  netai.yaml  pyproject.toml
src/netai/: __init__.py  cli.py
src/netai/api/: app.py
src/netai/benchmark/: __init__.py  runner.py
src/netai/cache/: __init__.py  manager.py
src/netai/compute_pool/: __init__.py  jackin.py  pipeline.py  pool.py  share.py  stratum.py
src/netai/consensus/: __init__.py  pipeline_coordinator.py
src/netai/crypto/: __init__.py  identity.py
src/netai/github/: __init__.py  integration.py
src/netai/inference/: __init__.py  architectures.py  autoloader.py  compress.py  downloader.py  engine.py  gguf_parser.py  kv_cache.py  native_engine.py  numba_ops.py  pipeline_executor.py  router.py  tokenizer.py
src/netai/p2p/: __init__.py  handshake.py  network.py
src/netai/resource/: __init__.py  profiler.py
src/netai/scheduler/: __init__.py  scheduler.py
tests/: test_advanced_edge_cases.py  test_api.py  test_architectures.py  test_audit_fixes.py  test_autoloader.py  test_benchmark.py  test_bug_fixes.py  test_cache_manager.py  test_compute_pool.py  test_consensus.py  test_edge_cases.py  test_exporter.py  test_gguf_integration.py  test_inference.py  test_inference_validation.py  test_integration.py  test_native_engine.py  test_numba_ops.py  test_p2p.py  test_p2p_handshake.py  test_resource.py  test_security.py  test_security_hardening.py  test_streaming_auth_metrics.py  test_training.py  test_websocket.py
(+14 files in other folders)
